kubernetes/plex/02-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      nodeSelector:
        media: "plex"  # cambia si usaste otra label/selector para el worker
      containers:
        - name: plex
          image: plexinc/pms-docker:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true   # para /dev/dri (QuickSync)
          ports:
            - name: plex
              containerPort: 32400
            - name: plex-roku
              containerPort: 8324
            - name: plex-dlna
              containerPort: 32469
            - name: plex-upnp
              containerPort: 1900
              protocol: UDP
            - name: plex-gdm-1
              containerPort: 32410
              protocol: UDP
            - name: plex-gdm-2
              containerPort: 32412
              protocol: UDP
            - name: plex-gdm-3
              containerPort: 32413
              protocol: UDP
            - name: plex-gdm-4
              containerPort: 32414
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /Films
              readOnly: true
              subPath: Movies
            - name: media
              mountPath: /TVShows
              readOnly: true
              subPath: TV
            - name: transcode
              mountPath: /transcode
            - name: dev-dri
              mountPath: /dev/dri
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config
        - name: media
          hostPath:
            path: /mnt/media       # tu carpeta de medios en el worker
        - name: transcode
          persistentVolumeClaim:
            claimName: plex-transcode
          # --- Opción sin PVC, ahorra espacio:
          # emptyDir:
          #   sizeLimit: "10Gi"
        - name: dev-dri
          hostPath:
            path: /dev/dri
